--- a/SharpComicVine/SharpComicVine.nuspec
+++ b/SharpComicVine/SharpComicVine.nuspec
@@ -10,6 +10,6 @@
     <description>$description$</description>
     <releaseNotes>Initial release.</releaseNotes>
     <copyright>Copyright 2015</copyright>
-    <tags>ComicVine SharpComicVine</tags>
+    <tags>ComicVine SharpComicVine PCL Xamarin</tags>
   </metadata>
 </package>
