Forcing nuget pkg to use minimum of Microsoft.Bcl.Build 1.0.21

--- a/SharpComicVine/SharpComicVine.nuspec
+++ b/SharpComicVine/SharpComicVine.nuspec
@@ -11,5 +11,9 @@
     <releaseNotes>Initial release.</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>ComicVine SharpComicVine PCL Xamarin</tags>
+		<dependencies>
+			<dependency id="Microsoft.Bcl.Build"
+									version="1.0.21" />
+		</dependencies>
   </metadata>
 </package>
