--- a/SharpComicVine/SharpComicVine.nuspec
+++ b/SharpComicVine/SharpComicVine.nuspec
@@ -8,10 +8,13 @@
     <owners>$author$</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
+		<projectUrl>https://github.com/mattwhetton/SharpComicVine</projectUrl>
     <releaseNotes>Initial release.</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>ComicVine SharpComicVine PCL Xamarin</tags>
 		<dependencies>
+			<dependency id="Microsoft.Bcl"
+									version="1.1.10" />
 			<dependency id="Microsoft.Bcl.Build"
 									version="1.0.21" />
 		</dependencies>
